deploy: b62ea32928b1d712dc7a0103a722c4fbe2c06950

--- a/rhoso-intro/1/ch1-intro/s1-rhoso-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s1-rhoso-lecture.html
@@ -205,7 +205,7 @@
 <p>The <a href="https://www.redhat.com/en/topics/virtualization/what-is-KVM"><strong>KVM</strong></a> hypervisor with the <a href="https://www.qemu.org/"><strong>Qemu</strong></a> emulation layer and the <a href="https://libvirt.org/"><strong>libvirt</strong></a> management API, all of them included with RHEL.</p>
 </li>
 <li>
-<p>The <a href="https://www.redhat.com/en/technologies/cloud-computing/openshift"><strong>Red Hat OpenShift</strong></a> application platform.</p>
+<p>The <a href="https://www.redhat.com/en/technologies/cloud-computing/openshift"><strong>Red Hat OpenShift</strong></a> application platform and its container-optimized operating system <a href="https://access.redhat.com/documentation/en-us/openshift_container_platform/4.14/html/architecture/architecture-rhcos">Red Hat Enterprise Linux CoreOS (RHCOS)</a>.</p>
 </li>
 <li>
 <p>The <a href="https://www.ovn.org/en/"><strong>Open Virtual Network (OVN)</strong></a> software-defined network layer.</p>
@@ -229,7 +229,7 @@
 </div>
 </div>
 <div class="sect1">
-<h2 id="_what_is_inside_an_openstack_cluster"><a class="anchor" href="#_what_is_inside_an_openstack_cluster"></a>What is inside an OpenStack Cluster</h2>
+<h2 id="_structure_of_an_openstack_cluster"><a class="anchor" href="#_structure_of_an_openstack_cluster"></a>Structure of an OpenStack Cluster</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>An OpenStack cluster is composed of two parts:</p>
