deploy: e8ef8a9f7af52b2851236d24c015abf4ec813c2c

--- a/rhoso-intro/1/ch1-intro/s1-rhoso-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s1-rhoso-lecture.html
@@ -278,43 +278,43 @@
 </colgroup>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Product or feature</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>OpenShift Virtualization</strong></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>OpenShift Sandboxed Containers</strong></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>OpenStack Services on OpenShift</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Product / feature</p></td>
+<th class="tableblock halign-left valign-top"><p class="tableblock">OpenShift Virtualization</p></th>
+<th class="tableblock halign-left valign-top"><p class="tableblock">OpenShift Sandboxed Containers</p></th>
+<th class="tableblock halign-left valign-top"><p class="tableblock">OpenStack Services on OpenShift</p></th>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Hypervisor technology</em></p></td>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Hypervisor technology</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock">KVM + Qemu + libvirt</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">KVM + Qemu + libvirt</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">KVM + Qemu + libvirt</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Application packaging</em></p></td>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Application packaging</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock">VM image (qcow2)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Container image (OCI)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">VM image (qcow2)</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Application VM management APIs</em></p></td>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Application VM management APIs</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Kubervirt APIs + Kubernetes APIs</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Kubernetes APIs</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">OpenStack APIs</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Compute nodes</em></p></td>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Compute nodes</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock">RH CoreOS (OpenShift)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">RH CoreOS (OpenShift)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">RHEL (OpenStack)</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Block and File Storage</em></p></td>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Block and File Storage</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Kubernetes PVCs</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Kubernetes PVCs</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">OpenStack Cinder and Manila</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><em>Virtual Networking</em></p></td>
+<th class="tableblock halign-left valign-top"><p class="tableblock">Virtual Networking</p></th>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Kuberentes pod/service network + Multus secondary networks</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Kuberentes pod/service network + Multus secondary networks</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">OpenStack Neutron tenant and provider networks, routers, etc</p></td>
