--- a/rhoso-intro/1/ch1-intro/s3-operations-lecture.html
+++ b/rhoso-intro/1/ch1-intro/s3-operations-lecture.html
@@ -171,19 +171,19 @@
 <p>If you are new to OpenStack it&#8217;s recommended that you gain experience as an OpenStack Operator before taking responsibility of OpenStack Administrator tasks.</p>
 </div>
 <div class="paragraph">
-<p>Depending on the size of an oNOTE: rganization, OpenStack users can either perform other IT roles by themselves or work closely with IT professionals from other roles. For example, an OpenStack Operator may also be the System Administrator who manages the RHEL operating system inside a server instance.</p>
+<p>Depending on the size of an organization, OpenStack users can either perform other IT roles by themselves or work closely with IT professionals from other roles. For example, an OpenStack Operator may also be the System Administrator who manages the RHEL operating system inside a server instance.</p>
 </div>
 <div class="paragraph">
-<p>As a counter-example, an OpenStack Operator may delegate the server instance operating system configuration to a Database Administrator who is responsible for the database server running inside that server instance. OpenStack Operators usually work closely with DevOps Engineers, Email Administrators, ERP Administrators, and other IT roles focused on application development or application management.</p>
+<p>As a counter-example, an OpenStack Operator may delegate the configuration of the operating system inside a server instance to a Database Administrator, who is responsible for the database server running inside that server instance. OpenStack Operators usually work closely with DevOps Engineers, Email Administrators, ERP Administrators, and other IT roles focused on application development or application management.</p>
 </div>
 <div class="paragraph">
-<p>Similarly, an OpenStack Administrator may also be an OpenShift Administrator. And as a counter-example, an OpenStack Administrator may work closely with a RHEL Systems Administration team responsible for all servers in the organizaiton, including compute nodes of an OpenStack cluster. OpenStack Administrators usually work closely with Storage Administrators, Network Administrators, and other IT Operations roles focused on infrastructure.</p>
+<p>Similarly, an OpenStack Administrator may also be an OpenShift Administrator. And as a counter-example, an OpenStack Administrator may work closely with a RHEL Systems Administration team responsible for all servers in the organizaiton, including compute nodes of an OpenStack cluster. OpenStack Administrators usually work closely with Storage Administrators, Network Administrators, and other IT Operations roles focused on data center infrastructure and platforms.</p>
 </div>
 <div class="paragraph">
 <p>On smaller organizations, the same team perform both OpenStack Operator and Administrator roles. On larger organizations, multiple teams of OpenStack Operators might be responsible for different workloads running on the same cluster. Conversely, a larger OpenStack Administration team migh split into subteams who manage different Az or cells of a single cluster.</p>
 </div>
 <div class="paragraph">
-<p>The scope of work of an OpenStack Operator or Administrator usually includes multiple clusters. It&#8217;s unlikely that an organization will run all their workloads and put all their physical servers into a single OpenStack cluster. More frequently, they&#8217;ll have multiple clusters which run instances (or copies) of the same workloads, to be closer to their end users or for high availability purposes.</p>
+<p>The scope of work of an OpenStack Operator or Administrator usually includes multiple clusters. It&#8217;s unlikely that an organization will run all their workloads and put all their physical servers in a single OpenStack cluster. More frequently, they&#8217;ll have multiple clusters which run instances (or copies) of the same workloads, to be closer to their end users or for high availability purposes.</p>
 </div>
 </div>
 </div>
