deploy: d8e595fa384a55e57525343ab51495135ba9e26c

--- a/rhoso-intro/1/ch1-intro/s2-components-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s2-components-quiz-answers.html
@@ -155,7 +155,7 @@
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Red Hat Virtualization (RHV)<br>
-<em>Incorrect: Red Hat Open Serices on OpenShift does not include and does not support running a control plane on RHV.</em></p>
+<em>Incorrect: Red Hat Open Serices on OpenShift does not include and does not support running a control plane on RHV. It also does not support running application workloads on VMs managed by RHV.</em></p>
 </li>
 <li>
 <p><i class="fa fa-check-square-o"></i> <strong>Red Hat Ceph Storage</strong><br>
