--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
@@ -74,6 +74,18 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#s5-ui-lecture.adoc">s5-ui-lecture.adoc</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#s6-ui-demo.adoc">s6-ui-demo.adoc</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#s7-review-quiz.adoc">s7-review-quiz.adoc</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#s8-summary.adoc">s8-summary.adoc</a>
+  </li>
 </ul>
   </li>
 </ul>
@@ -138,6 +150,18 @@
 </div>
 <div class="paragraph">
 <p>Relate tasks to OpenStack administrators, operators, and other IT roles.</p>
+</div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+WIP
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
