--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz-answers.html
@@ -81,7 +81,7 @@
     <a class="nav-link" href="s6-ui-demo.html">Demo: OpenStack Client and Web Console</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="s7-review-quiz.html">Review: Red Hat OpenStack Operations</a>
+    <a class="nav-link" href="s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="s8-summary.html">Summary</a>
@@ -144,8 +144,7 @@
 </aside>
 <article class="doc">
 <h1 class="page">Answers to the Quiz</h1>
-<div class="sect1">
-<h2 id="_red_hat_openstack_operations_tasks"><a class="anchor" href="#_red_hat_openstack_operations_tasks"></a>Red Hat OpenStack Operations Tasks</h2>
+<div id="preamble">
 <div class="sectionbody">
 <div class="admonitionblock warning">
 <table>
@@ -154,11 +153,16 @@
 <i class="fa icon-warning" title="Warning"></i>
 </td>
 <td class="content">
-WIP
+Work In Progress
 </td>
 </tr>
 </table>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_red_hat_openstack_operations_tasks"><a class="anchor" href="#_red_hat_openstack_operations_tasks"></a>Red Hat OpenStack Operations Tasks</h2>
+<div class="sectionbody">
 <div class="olist arabic">
 <ol class="arabic">
 <li>
