--- a/rhoso-intro/1/ch1-intro/s6-ui-demo.html
+++ b/rhoso-intro/1/ch1-intro/s6-ui-demo.html
@@ -81,7 +81,7 @@
     <a class="nav-link" href="s6-ui-demo.html">Demo: OpenStack Client and Web Console</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="s7-review-quiz.html">Review: Red Hat OpenStack Operations</a>
+    <a class="nav-link" href="s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="s8-summary.html">Summary</a>
@@ -156,14 +156,17 @@
 <i class="fa icon-warning" title="Warning"></i>
 </td>
 <td class="content">
-WIP
+Work In Progress
 </td>
 </tr>
 </table>
 </div>
+<div class="paragraph">
+<p>==</p>
+</div>
 <nav class="pagination">
   <span class="prev"><a href="s5-ui-lecture.html">OpenStack User Interfaces</a></span>
-  <span class="next"><a href="s7-review-quiz.html">Review: Red Hat OpenStack Operations</a></span>
+  <span class="next"><a href="s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a></span>
 </nav>
 </article>
   </div>
