--- a/rhoso-intro/1/ch1-intro/s8-summary.html
+++ b/rhoso-intro/1/ch1-intro/s8-summary.html
@@ -81,7 +81,7 @@
     <a class="nav-link" href="s6-ui-demo.html">Demo: OpenStack Client and Web Console</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="s7-review-quiz.html">Review: Red Hat OpenStack Operations</a>
+    <a class="nav-link" href="s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a>
   </li>
   <li class="nav-item is-current-page" data-depth="2">
     <a class="nav-link" href="s8-summary.html">Summary</a>
@@ -166,7 +166,7 @@
 </ul>
 </div>
 <nav class="pagination">
-  <span class="prev"><a href="s7-review-quiz.html">Review: Red Hat OpenStack Operations</a></span>
+  <span class="prev"><a href="s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a></span>
   <span class="next"><a href="../ch2-services/index.html">Red Hat OpenStack Services</a></span>
 </nav>
 </article>
