--- a/rhoso-intro/1/ch1-intro/index.html
+++ b/rhoso-intro/1/ch1-intro/index.html
@@ -81,7 +81,7 @@
     <a class="nav-link" href="s6-ui-demo.html">Demo: OpenStack Client and Web Console</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="s7-review-quiz.html">Review: Red Hat OpenStack Operations</a>
+    <a class="nav-link" href="s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="s8-summary.html">Summary</a>
@@ -147,6 +147,29 @@
 <div class="sectionbody">
 <div class="paragraph">
 <p>Describe the Red Hat OpenStack products and how they relate to other Red Hat products, partner products, upstream projects, and IT professional roles.</p>
+</div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+Work in Progress
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>This chapter presents the OpenStack open source project and the <strong>Red Hat OpenStack Services on OpenShift</strong> product, so you understand now the current Red Hat OpenStack product is different from community OpenStack and from previous releases of Red Hat OpenStack plaform.</p>
+</div>
+<div class="paragraph">
+<p>This chapter also introduces two OpenStack user personas: the <strong>OpenStack Operator</strong>, which is the focus of this course, and the OpenStack Administrator, so you understand the scope of work, tooks, and skills required from OpenStack Operators to perform their daily jobs.</p>
 </div>
 </div>
 </div>
