--- a/rhoso-intro/1/ch1-intro/s2-components-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s2-components-quiz-answers.html
@@ -81,7 +81,7 @@
     <a class="nav-link" href="s6-ui-demo.html">Demo: OpenStack Client and Web Console</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="s7-review-quiz.html">Review: Red Hat OpenStack Operations</a>
+    <a class="nav-link" href="s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="s8-summary.html">Summary</a>
@@ -144,6 +144,22 @@
 </aside>
 <article class="doc">
 <h1 class="page">Answers to the Quiz</h1>
+<div id="preamble">
+<div class="sectionbody">
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+Pending review.
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="_components_of_red_hat_openstack_on_openshift"><a class="anchor" href="#_components_of_red_hat_openstack_on_openshift"></a>Components of Red Hat OpenStack on OpenShift</h2>
 <div class="sectionbody">
