--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz.html
@@ -81,7 +81,7 @@
     <a class="nav-link" href="s6-ui-demo.html">Demo: OpenStack Client and Web Console</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="s7-review-quiz.html">Review: Red Hat OpenStack Operations</a>
+    <a class="nav-link" href="s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="s8-summary.html">Summary</a>
@@ -158,7 +158,7 @@
 <i class="fa icon-warning" title="Warning"></i>
 </td>
 <td class="content">
-WIP
+Work In Progress
 </td>
 </tr>
 </table>
