--- a/rhoso-intro/1/ch2-services/index.html
+++ b/rhoso-intro/1/ch2-services/index.html
@@ -81,7 +81,7 @@
     <a class="nav-link" href="../ch1-intro/s6-ui-demo.html">Demo: OpenStack Client and Web Console</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="../ch1-intro/s7-review-quiz.html">Review: Red Hat OpenStack Operations</a>
+    <a class="nav-link" href="../ch1-intro/s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="../ch1-intro/s8-summary.html">Summary</a>
@@ -147,6 +147,18 @@
 <div class="sectionbody">
 <div class="paragraph">
 <p>Describe the user-facing services of Red Hat OpenStack Services on OpenShift.</p>
+</div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+Work in Progress
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
