--- a/rhoso-intro/1/index.html
+++ b/rhoso-intro/1/index.html
@@ -80,7 +80,7 @@
     <a class="nav-link" href="ch1-intro/s6-ui-demo.html">Demo: OpenStack Client and Web Console</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="ch1-intro/s7-review-quiz.html">Review: Red Hat OpenStack Operations</a>
+    <a class="nav-link" href="ch1-intro/s7-review-quiz.html">Review Quiz: Red Hat OpenStack Operations</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="ch1-intro/s8-summary.html">Summary</a>
@@ -141,6 +141,22 @@
 </aside>
 <article class="doc">
 <h1 class="page">About This Course</h1>
+<div id="preamble">
+<div class="sectionbody">
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+Work in Progress
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 <div class="sect1">
 <h2 id="_introduction_to_openstack_services_on_openshift"><a class="anchor" href="#_introduction_to_openstack_services_on_openshift"></a>Introduction to OpenStack Services on OpenShift</h2>
 <div class="sectionbody">
